--- a/qube_stage1.ipynb
+++ b/qube_stage1.ipynb
@@ -15,7 +15,7 @@
     "from torch.cuda.amp import autocast,GradScaler\n",
     "import time\n",
     "from dataset import NormalDataset\n",
-    "from model import SelfAttnModel,GinAttnModel,EMA"
+    "from model import SelfAttnModel,DinAttnModel,EMA"
    ]
   },
   {
