--- a/qube_stage2.ipynb
+++ b/qube_stage2.ipynb
@@ -17,7 +17,7 @@
     "import pickle\n",
     "from sam import SAM\n",
     "from dataset import PanelDataset\n",
-    "from model import SelfAttnModel,GinAttnModel,EMA,Stage2Model"
+    "from model import SelfAttnModel,DinAttnModel,EMA,Stage2Model"
    ]
   },
   {
